# drone-human-object-detection

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: detection_params.yaml
launch/: detection.launch.py
msg/: HumanPose.msg  Landmark.msg
scripts/: detection_node.py  dual_camera_detection_node.py  record_camera_video.py  single_camera_detection_node.py
