<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection_and_distance</name>
  <version>1.0.0</version>
  <description>
    Object detection and human pose estimation with distance measurement using RealSense cameras.
    Detects objects from downward camera and humans with pose from front camera using GroundingDINO.
  </description>

  <maintainer email="user@example.com">James</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>builtin_interfaces</depend>

  <!-- Message generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
